# HyprBind

./: .editorconfig  Cargo.toml  LICENSE  LICENSE-MIT  LICENSE-OFL  PKGBUILD  README.md  hyprbind-theme.sample.css  hyprbind.desktop  rust-toolchain.toml
.github/instructions/: directory.instructions.md  project.instructions.md  rust-library.instructions.md  testing.instructions.md
.github/workflows/: ci.yml
src/: app.rs  cli.rs  config.rs  css.rs  font.rs  icons.rs  main.rs  models.rs  parser.rs
src/app/: mod.rs  sorting.rs  state.rs
src/config/: mod.rs  paths.rs  user.rs
src/hyprland/: mod.rs  models.rs  parser.rs  source.rs
src/tests/: config_roundtrip.rs  icons.rs  mod.rs  models.rs  parser.rs  parser_edge.rs  source_error.rs  table.rs
src/ui/: header.rs  mod.rs  options.rs  table.rs  types.rs  zen.rs
src/ui/styling/: fonts.rs  icons.rs  mod.rs
