[package]
name = "HyprBind"
version = "0.1.4-alpha"
edition = "2024"
license = "MIT AND OFL-1.1"
authors = ["Ry2X <45420571+ry2x@users.noreply.github.com>"]
description = "A GUI to display Hyprland keybindings"
repository = "https://github.com/ry2x/HyprBind"
readme = "README.md"
keywords = ["hyprland", "gui", "keybindings", "linux"]
categories = ["gui", "visualization"]

[dependencies]
eframe = { version = "0.33.0", default-features = false, features = [
  "glow",
  "wayland",
  "x11",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
egui = { version = "0.33.0", default-features = false }
egui_extras = { version = "0.33.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = [
  "std",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
# Enable for educational purposes, but don't block CI
pedantic = "warn"
nursery = "warn"

# To avoid .unwrap() usage
unwrap_used = "warn"

# Float comparisons can be problematic
float_cmp = "warn"

# Allow many arguments in functions for GUI code
#too_many_arguments = "allow"
